    @startuml class diagram

    skin rose
    !theme blueprint

    title Class Diagram - Harmony Heaven Ecommerce

    class User {
        + UUID id
        + String name
        + String email
        + String password
        + String address
        + String phone
        + String role

        + Register()
        + Login()
        + GetProfile()
        + UpdateProfile()
        + DeleteProfile()
        + AddToCart()
        + RemoveFromCart()
        + AddCommand()
        + CancelCommand()
        + AddPayment()
        + AddDelivery()
        + GetReceipt()
        + Logout()
    }

    class Product {
        + Int id
        + String name
        + String description
        + Float price
        + String image
        + String type
        + String label
        + String year
        + String country
        + String format
        + Genre genre
        + Style style
        + Int stock

        + getProduct()
        + createNewProduct()
        + updateProduct()
        + deleteProduct()
        + updateStock()
        + getStock()
    }

    class Genre {
        + Int id
        + String name
        + String description

        + getGenre()
        + createNewGenre()
        + updateGenre()
        + deleteGenre()

    }

    class Style {
        + Int id
        + String name
        + String description

        + getStyle()
        + createNewStyle()
        + updateStyle()
        + deleteStyle()
    }

    class Cart {
        + Int id
        + User user_id
        + Product product_id
        + Quantity quantity

        + getCart()
        + addProductToCart()
        + updateCart()
        + removeProductFromCart()
        + setEmptyCart()
    }

    class Cart_item {
        + Int id
        + Int quantity
    }

    class Wishlist {
        + Int id
        + User user_id
        + Product product_id
        + Quantity quantity

        + getWishlist()
        + addProductToWishlist()
        + updateWishlist()
        + removeProductFromWishlist()
    }

    class Wishlist_item {
        + Int id
        + Int quantity
    }

    class Command {
        + Int id
        + User user_id
        + Product product_id
        + Payment payment_id
        + Delivery delivery_id
        + String Status

        + getCommand()
        + createCommandeFromCart()
        + cancelCommand()
        + getStatus()
        + updateStatus()
    }

    class Command_item {
        + Int id
        + Int quantity
    }

    class Receipt {
        + Int id
        + Command command_id
        + Product product_id

        + getReceipt()
        + sendEmailReceipt()
    }

    class Payment {
        + Int id
        + String paymentMethod
        + String status
        + Float amountPaid

        + getPaymentStatus()
        + updatePaymentStatus()
        + getAmountPaid()
    }


    class Delivery {
        + Int id
        + String address
        + String status
        + Date deliveryDate
        + String deliveryMethod
        + Float deliveryCost

        + getDeliveryStatus()
        + updateDeliveryStatus()
        + getDeliveryDate()
        + updateDeliveryDate()
        + getDeliveryMethod()
        + updateDeliveryMethod()
        + getDeliveryCost()
    }


    User "1" -- "*" Cart

    Cart "1" -- "*" Cart_item

    Cart_item "*" -- "1..*" Product

    User "1" -- "*" Wishlist

    Wishlist "1" -- "*" Wishlist_item

    Wishlist_item "*" -- "1..*" Product

    User "1" -- "*" Command 


    Product "*" -- "*" Genre 

    Product "*" -- "*" Style 


    Command "1" -- "*" Receipt 

    Command "1" -- "*" Payment 

    Command "1" -- "*" Delivery 

    Command "1" -- "1..*" Command_item

    Command_item "1..*" -- "1..*" Product

    @enduml